fixed overflow, and post url endpoint

--- a/public/css/Index_A.css
+++ b/public/css/Index_A.css
@@ -4,6 +4,9 @@ Page A CSS
 
 */
 
+html {
+    overflow-x: hidden;
+}
 
 /* Body */
 body {
@@ -167,11 +170,11 @@ header .ED-pedia {
 
 /* Break Point 2 */
 #break-point-2 {
-    background: 
+    background:
         linear-gradient(
-            to left, 
-            white, 
-            rgba(255, 255, 255, 0.2)), 
+            to left,
+            white,
+            rgba(255, 255, 255, 0.2)),
         url("../img/screen.png") no-repeat center;
     background-size: cover;
     padding-top: 50px;
@@ -183,11 +186,11 @@ header .ED-pedia {
 
 /* Break Point 3 */
 #break-point-3 {
-    background: 
+    background:
         linear-gradient(
-            to right, 
-            white, 
-            rgba(255, 255, 255, 0.2)), 
+            to right,
+            white,
+            rgba(255, 255, 255, 0.2)),
         url("../img/screen2.png") no-repeat center;
     background-size: cover;
     padding-top: 50px;
@@ -411,11 +414,11 @@ header .ED-pedia {
 @media screen and (max-width: 580px) {
 
     #break-point-2 {
-        background: 
+        background:
         linear-gradient(
-            to left, 
-            white, 
-            rgba(255, 255, 255, 0.7)), 
+            to left,
+            white,
+            rgba(255, 255, 255, 0.7)),
         url("../img/screen.png") no-repeat center;
     background-size: cover;
     }
@@ -430,11 +433,11 @@ header .ED-pedia {
     }
 
     #break-point-3 {
-        background: 
+        background:
         linear-gradient(
-            to right, 
-            white, 
-            rgba(255, 255, 255, 0.7)), 
+            to right,
+            white,
+            rgba(255, 255, 255, 0.7)),
         url("../img/screen2.png") no-repeat center;
     background-size: cover;
     }
@@ -487,7 +490,7 @@ header .ED-pedia {
 }
 
 @media screen and (max-width: 946px) {
-    
+
     #videos .video-border {
         display: inline-block;
         width: 100%;
