--- a/public/css/Index_C.css
+++ b/public/css/Index_C.css
@@ -2,7 +2,9 @@
 Page C CSS
 */
 
-
+html {
+    overflow-x: hidden;
+}
 
 /* Body */
 body {
@@ -240,11 +242,11 @@ header .ED-pedia {
 
 /* Break Point 2 */
 #break-point-2 {
-    background: 
+    background:
         linear-gradient(
-            to left, 
-            white, 
-            rgba(255, 255, 255, 0.2)), 
+            to left,
+            white,
+            rgba(255, 255, 255, 0.2)),
         url("../img/screen.png") no-repeat center;
     background-size: cover;
     padding-top: 50px;
@@ -256,11 +258,11 @@ header .ED-pedia {
 
 /* Break Point 3 */
 #break-point-3 {
-    background: 
+    background:
         linear-gradient(
-            to right, 
-            white, 
-            rgba(255, 255, 255, 0.2)), 
+            to right,
+            white,
+            rgba(255, 255, 255, 0.2)),
         url("../img/screen2.png") no-repeat center;
     background-size: cover;
     padding-top: 50px;
@@ -497,13 +499,13 @@ textarea:focus, input:focus {
 
 
 @media screen and (max-width: 580px) {
-    
+
     #break-point-2 {
-        background: 
+        background:
         linear-gradient(
-            to left, 
-            white, 
-            rgba(255, 255, 255, 0.7)), 
+            to left,
+            white,
+            rgba(255, 255, 255, 0.7)),
         url("../img/screen.png") no-repeat center;
     background-size: cover;
     }
@@ -518,11 +520,11 @@ textarea:focus, input:focus {
     }
 
     #break-point-3 {
-        background: 
+        background:
         linear-gradient(
-            to right, 
-            white, 
-            rgba(255, 255, 255, 0.7)), 
+            to right,
+            white,
+            rgba(255, 255, 255, 0.7)),
         url("../img/screen2.png") no-repeat center;
     background-size: cover;
     }
@@ -576,7 +578,7 @@ textarea:focus, input:focus {
 }
 
 @media screen and (max-width: 946px) {
-    
+
     #videos .video-border {
         display: inline-block;
         width: 100%;
